quests/design-implement-manage/build_n_deploy_K8s/manifests/echoweb-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-lb-service
  labels:
    app: echo
spec:
  type: LoadBalancer
  selector:
    app: echo-web
    tier: web
  ports:
  - port: 80
    targetPort: 8000
