quests/design-implement-manage/build_n_deploy_K8s/manifests/echoweb-ingress-service.yaml
# alternatively, you can use a container-native lb through Ingress
apiVersion: v1
kind: Service
metadata:
  name: echo-ingress-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: echo-web
    tier: web
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-service-ingress
spec:
  defaultBackend:
    service:
      name: echo-service
      port:
        number: 80
